--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,2 @@
-/* Awesome styling */
-h1 {
-    font-size: 5em;
-    text-align: center;
-    text-transform: uppercase;
-}
 
-.char3 {
-    color: red;
-}
+/*# sourceMappingURL=styles.css.map */
